fix video autoplay on mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <main>
-        <video id="video" loop muted crossorigin="anonymous" playsinline style="display:none" preload="auto">
+        <video id="video" loop muted crossorigin="anonymous" playsinline style="display:none" preload="auto" autoplay>
 			<!-- <source src="videos/pano.webm"> -->
 			<source src="videos/demo.mp4">
 		</video>
